--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,10 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: notacommand
+      - run: "echo a first hello"
+  build:
+    docker:
+      - image: circleci/ruby:2.4.1
+    steps:
+      - checkout
+      - run: "echo a first hello"
