--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,23 @@
 version: 2
 jobs:
-  build:
+  one:
     docker:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
       - run: "echo a first hello"
-  build:
+      - run: sleep 25
+  two:
     docker:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: "echo a first hello"
+      - run: "echo a more familiar hi"
+      - run: sleep 15
+workflows:
+  verson: 2
+  one_and_two:
+    jobs:
+      - one
+      - two
+      
