--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,42 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - emulator -avd circleci-android22 -no-audio -no-window:
-            background: true
-            parallel: true
-      # wait for it to have booted
-      - circle-android wait-for-boot
-      # unlock the emulator screen
-      - sleep 30
-      - adb shell input keyevent 82
+  test_api_v25:
+    working_directory: ~/code
+    docker:
+        - image: circleci/android:api-26-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - run:
+          name: Setup emulator
+          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
+      - run:
+          name: Launch emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+          background: true
+      - run:
+          name: Wait emulator
+          command: |
+            # wait for it to have booted
+            circle-android wait-for-boot
+            # unlock the emulator screen
+            sleep 30
+            adb shell input keyevent 82
       - run:
           name: Run Tests
-          command: ./gradlew lint test
+          command: ./gradlew connectedAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  workflows:
+  version: 2
+  build_test_and_deploy:
+    jobs:
+      - build
+      - test_api_v25:
+          requires:
+            - build
