--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,3 +50,8 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  workflows:
+    version: 2
+    build_test_and_deploy:
+        jobs:
+            - build
