--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,45 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  documentation:
+    working_directory: ~/code
+    docker:
+        - image: circleci/android:api-26-alpha
+    environment:
+        JVM_OPTS: -Xmx3200m
+    steps:
+        - checkout
+        - restore_cache:
+            key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+        - run:
+            name: Setup environment
+            command: source ci/scripts/ci_setup.sh
+        - run:
+            name: Setup emulator
+            command: sdkmanager "system-images;android-16;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-16;default;armeabi-v7a"
+        - run:
+            name: Launch emulator
+            command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+            background: true
+        - run:
+            name: Wait emulator
+            command: |
+              # wait for it to have booted
+              circle-android wait-for-boot
+              # unlock the emulator screen
+              sleep 30
+              adb shell input keyevent 82
+        - run:
+            name: Coverage
+            command: source ci/scripts/ci_coverage.sh
+        - run:
+            name: Javadoc
+            command: source ci/scripts/ci_javadoc.sh
+        - save_cache:
+            paths:
+              - ~/.gradle
+            key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+            
 workflows:
   version: 2
   build_test_and_deploy:
@@ -59,3 +98,6 @@ workflows:
       - test_api_v16:
             requires:
                 - build
+      - documentation:
+            requires:
+                - test_api_v16
