--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
     docker:
       - image: circleci/android:api-26-alpha
     environment:
-      JVM_OPTS: -Xmx4G
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
       - run: echo "meow is working for you 👯"
@@ -137,7 +137,4 @@ workflows:
   build_test_and_deploy:
     jobs:
       - build
-      - test_api_v16:
-            requires:
-                - build
       - beta_release
