--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,9 @@ jobs:
     docker:
       # Android the primary container
       - image: circleci/android:api-26-alpha
+    dependencies: 
+        pre: 
+            - echo "export rvm_ignore_gemsets_flag=1" >> ~/.rvmrc - gem install bundler
     environment:
       JVM_OPTS: -Xmx3200m
       FASTLANE_LANE: test
