--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
           key: 1-gems-{{ checksum "Gemfile.lock" }}
       - run:
           name: install Bundler
-          command: echo "export rvm_ignore_gemsets_flag=1" >> ~/.rvmrc - gem install bundler
+          command: gem install bundler
       - run: bundle check || bundle install --path vendor/bundle
       - save_cache:
           key: 1-gems-{{ checksum "Gemfile.lock" }}
