add dummy function to check the bundle installation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,17 @@ jobs:
             paths:
               - ~/.gradle
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+  precompile_assets:
+    docker:
+      - image: circleci/ruby:2.4-node
+      - image: circleci/postgres:9.4.12-alpine
+    working_directory: ~/circleci-demo-workflows
+    steps:
+      - restore_cache:
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          key: v1-bundle-{{ checksum "Gemfile.lock" }}
+      - run: bundle --path vendor/bundle
   deploy_beta:
     working_directory: ~/code
     docker:
@@ -131,3 +142,4 @@ workflows:
       - deploy_beta:
             requires:
                 - build
+                - precompile_assets
