--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,7 @@ workflows:
   build_test_and_deploy:
     jobs:
       - build
+      - precompile_assets
       - test_api_v16:
             requires:
                 - build
