--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.4-node
       - image: circleci/postgres:9.4.12-alpine
-    working_directory: ~/circleci-demo-workflows
+    working_directory: ~/code
     steps:
       - restore_cache:
           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
