--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,22 +90,12 @@ jobs:
             paths:
               - ~/.gradle
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-  precompile_assets:
-    docker:
-      - image: circleci/ruby:2.4-node
-      - image: circleci/postgres:9.4.12-alpine
-    working_directory: ~/code
-    steps:
-      - restore_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          key: 1-gems-{{ checksum "Gemfile.lock" }}
-      - run: bundle --path vendor/bundle
   deploy_beta:
     working_directory: ~/code
     docker:
       # Android the primary container
       - image: circleci/android:api-26-alpha
+      - image: circleci/ruby:2.4-node
     environment:
       JVM_OPTS: -Xmx3200m
       FASTLANE_LANE: test
@@ -115,6 +105,7 @@ jobs:
       - checkout
       - restore_cache:
           key: 1-gems-{{ checksum "Gemfile.lock" }}
+      - run: gem install bundler
       - run: bundle check || bundle install --path vendor/bundle
       - save_cache:
           key: 1-gems-{{ checksum "Gemfile.lock" }}
@@ -136,7 +127,6 @@ workflows:
   build_test_and_deploy:
     jobs:
       - build
-      - precompile_assets
       - test_api_v16:
             requires:
                 - build
