add dependencies workflow on deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,4 +133,4 @@ workflows:
                 - build
       - deploy_beta:
             requires:
-                - build
+                - test_api_v16
