--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     //dependencies for tab bar
     compile 'com.android.support:design:26.1.0'
 
+    //this is framework for RESTApi
+    compile 'com.android.volley:volley:1.1.0'
+
     compile 'com.ss.bannerslider:bannerslider:1.8.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
