add details on the merchant and partner also add splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-        <activity android:name=".WelcomeSliders.WelcomeActivity">
+        <activity android:name=".WelcomeSliders.WelcomeActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,7 +46,8 @@
         <activity
             android:name=".Activities.EarnPointDetails.ListEarnPointsMenu"
             android:label="@string/title_activity_list_earn_points_menu" />
-        <activity android:name=".Activities.MerchantDetails.MerchantDetails"></activity>
+        <activity android:name=".Activities.MerchantDetails.MerchantDetails" />
+        <activity android:name=".Activities.ExcitePartner.ExcitePartnerMaster"></activity>
     </application>
 
 </manifest>
