--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
         // We recommend changing it to the latest version from our changelog:
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
         classpath 'io.fabric.tools:gradle:1.+'
+
+        classpath 'com.google.gms:google-services:1.5.0-beta2'
     }
 }
 
