refactored code to new package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     }
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.lenovo.myapplication"
+        applicationId 'com.excite.mobile.shop'
         minSdkVersion 17
         versionCode 5
         versionName "4.1"
@@ -32,6 +32,8 @@ android {
         debug {
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -39,6 +41,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.facebook.android:facebook-login:[4,5)'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     testImplementation 'junit:junit:4.12'
